--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.12.1",
+    "react-router-hash-link": "^2.4.3",
     "redux": "^4.2.1"
   },
   "devDependencies": {
